--- a/popup.html
+++ b/popup.html
@@ -19,6 +19,12 @@
 					<span class="slider"></span>
 				</label>
 			</p>
+			<p>Follow Mouse:
+				<label class="switch">
+					<input type="checkbox" id="fmouse" checked>
+					<span class="slider"></span>
+				</label>
+			</p>
 		</div>
 		<h4>How to use the extension:</h4>
 		<h4>1. click on "spawn main tab", this is the tab that you'll be using to play.</h4>
